...
    <TextView
        android:text="Phone"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etMobileChange"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="Password"
        android:layout_margin="15dp"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnUpdate"
            android:text="Update"
            android:background="#213970"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="0dp"
...
