<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_book"
        android:title="Books" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_favorites"
        android:title="Favorite" />

    <item
        android:id="@+id/navigation_setting_bar"
        android:icon="@drawable/ic_setting"
        android:title="Setting"/>

</menu>
