<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="20sp"
        android:background="#FF4500"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="Personal Information"
            android:textColor="#FFFFFF"
            android:textSize="24dp"></TextView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutProfile"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="22dp"
        android:background="#f2f2f2">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:src="@drawable/profile"></ImageView>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="18dp"
            android:layout_toRightOf="@+id/profile"
            android:fontFamily="@font/roboto_regular"
            android:text="Michelle Smith"
            android:textColor="#FF4500"
            android:textSize="22dp"></TextView>


        <TextView
            android:id="@+id/tvMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/profile"
            android:fontFamily="@font/roboto_regular"
            android:text="0815 *** **"
            android:textColor="#FF4500"
            android:textSize="16dp"></TextView>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/arrow_dark"></ImageView>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp">

        <ImageView
            android:id="@+id/icon_sett"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/settings">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/icon_sett"
            android:text="Map"
            android:textSize="20dp"></TextView>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_dark">

        </ImageView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp">

        <ImageView
            android:id="@+id/icon_set"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/settings">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/icon_set"
            android:text="About Us"
            android:textSize="20dp"></TextView>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_dark">

        </ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp">

        <ImageView
            android:id="@+id/icon_sh"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/shield">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/icon_sh"
            android:text="LogOut"
            android:textSize="20dp"></TextView>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_dark">

        </ImageView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp">

        <ImageView
            android:id="@+id/car2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/cart">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/car2"
            android:text="Order History"
            android:textSize="20dp"></TextView>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_dark">

        </ImageView>
    </RelativeLayout>
</LinearLayout>
</ScrollView>