<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF4500"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/etSearch"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="Available Books" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="2dp"
            android:src="@android:drawable/ic_menu_search"
            tools:ignore="contentDescription" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBook"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:paddingBottom="50dp"
        android:layout_height="wrap_content"/>

</LinearLayout>